# rooster-graphics

./: .gitignore  CMakeLists.txt  README.md  setup.ps1  setup.sh
resources/models/default/CUBE/: default_cube.blend  default_cube.mtl
shaders/: shader.frag  shader.vert
source/: main.cc
source/imgui/: imgui_manager.cc  imgui_manager.h
source/interface/: interface.cc  interface.h
source/object/: mesh.h  model.h  object.h
source/rendering/: framebuffer_manager.cc  framebuffer_manager.h  renderer.cc  renderer.h
source/rendering/shader/: shader.h  uniform_buffer.cpp  uniform_buffer.h
source/scene/: scene.cc  scene.h
source/window/: input_handler.cc  input_handler.h  window.h
